external-quote/force-app/main/default/objects/SuperTRUMP_Quote_Loan__c/SuperTRUMP_Quote_Loan__c.object-meta.xml
<CustomObject>
    <label>SuperTRUMP Quote Loan</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Loan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuperTRUMP Quote Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>