external-quote/force-app/main/default/objects/SuperTRUMP_Quote_Loan__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>SuperTRUMP_Quote__c</referenceTo>
    <relationshipLabel>SuperTRUMP Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>