external-quote/force-app/main/default/objects/SuperTRUMP_Quote_Loan__c/fields/stExternalID__c.field-meta.xml
<CustomField>
    <fullName>stExternalID__c</fullName>
    <label>ST ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>