external-quote/force-app/main/default/objects/SuperTRUMP_Quote_Loan__c/fields/Total_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Funding__c</fullName>
    <label>Total Funding</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>